<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>bno055_driver</name>
  <version>0.0.0</version>
  <description>Driver for the Bosch BNO055 IMU</description>
  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>
  <license>ASL 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
